2008-09-28  Bernhard R. Link <brlink@debian.org>

	* src/file.c (file_assureDirectory): Changed 2nd argument to be const
	
	* src/info.c: Fixed one warning
	
	* configure.ac: Cleaner ZIO Detection

2008-09-28  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* configure.ac, src/versionp.h: Bumped version to 3.6.6.90

2008-09-25  Markus Steinborn <gnugv_maintainer@yahoo.de>

	* configure.ac, src/versionp.h: Bumped version to 3.6.6
	
	* Updated my e-mail address.

2008-09-09  Dr. Werner Fink <werner@suse.de>

	* configure.ac: Check if the ZIO Library is available.

	* src/ps.c (psscan): Use the ZIO Library to decompress a file
	if the ZIO Library is presemt.

2008-09-09  Olaf Kirch <okir@suse.de>

	* src/secscanf.c: New file providing sec_sscanf with an additional 
	size argument for string arguments. All format specifiers should work
	as in the standard scanf - except for those writing to a string
	buffer provided by the caller. These specifiers take an additional
	argument of type size_t that specifies the size of the buffer.

	* src/ps.c: Replace all calls (with %s) to sscanf by sec_sscanf.
	
2008-09-09  Dr. Werner Fink <werner@suse.de>

	* src/Ghostview.c: Under some circimstances add "-dDELAYSAFER"
	to the commandline of gs.
	
	* src/misc.c (set_new_orientation): Handle the case Widget w is
	not initialized.
	
	* src/misc.c (set_new_pagemedia): likewise
	
	* src/musc.c (set_pagemediaButton_label): likewise
	
	* src/ps.c: Add include <sys/types.h>

2008-09-08  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/ps.c (psscan): Code cleanup: Use dup to use a new 
	guaranteed free non-arbitrary number, use open instead of 
	fopen & fileno.

2008-09-02  Bernhard R. Link <brlink@debian.org>

	* src/GhostviewP.h: Changed type of bytes_left from int to gv_off_t.

2008-09-02  Markus Steinborn <msteinbo@uni-paderborn.de>

	* src/Ghostview.c, src/Ghostview.h, src/GhostviewP.h, src/callbacks.c,
	src/file.c, src/misc.c, src/ps.c, src/ps.h, src/zoom.c: